--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColorHint="@color/colorAccent"
+        android:inputType="number"
         android:hint="@string/enter_hint" />
     <EditText
         android:id="@+id/num2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:hint="@string/enter_hint" />
 
     <Button
@@ -36,10 +38,31 @@
         android:layout_height="wrap_content"
         android:onClick="subNums"
         android:text="@string/sub" />
+    <Button
+        android:id="@+id/mult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="multNums"
+        android:text="@string/prod" />
+
+    <Button
+        android:id="@+id/div"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="divNums"
+        android:text="@string/div" />
+
+    <Button
+        android:id="@+id/clearButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="clearAll"
+        android:text="@string/clr" />
 
     <TextView
         android:id="@+id/result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="The answer will be here" />
+        android:text="@string/answer" />
+
 </LinearLayout>
